feat: expand event template handler; add previewer; expand project source model; implement necessary handlers
